--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,16 @@
           <artifactId>bootstrap</artifactId>
           <version>3.0.0</version>
       </dependency>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-core</artifactId>
+          <version>1.1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-access</artifactId>
+          <version>1.1.2</version>
+      </dependency>
 
   </dependencies>
   <build>
