--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,20 @@
           <artifactId>logback-access</artifactId>
           <version>1.1.2</version>
       </dependency>
-
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.9.4</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
   <build>
     <finalName>timeReportingsystem</finalName>
   </build>
